defined the transformer block and moving onto encoder

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "585026dd",
+   "id": "241bafaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef276f8f",
+   "id": "0bc62d5b",
    "metadata": {},
    "source": [
     "![Transformer architecture](./media/transformer.png)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aaee194",
+   "id": "b1bacd60",
    "metadata": {},
    "source": [
     "### Self attention module\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "83ec504d",
+   "id": "a35fc5f4",
    "metadata": {},
    "outputs": [
     {
@@ -110,54 +110,74 @@
     "        # dummy variable l corresponds to key_len and value_len\n",
     "        out = self.fc_out(out)\n",
     "        return out\n",
-    "a = SelfAttention(model_dim=12, heads=6)\n",
-    "a"
+    "a = SelfAttention(model_dim=12, heads=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f258e608",
+   "metadata": {},
+   "source": [
+    "### Transformer block \n",
+    "<img src=\"./media/transformer-block.png\" alt=\"transformer-block\" width=\"300\"/>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "26d07338",
+   "id": "d70336bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformerBlock(nn.Module):\n",
-    "    def __init__(self, model_dim, heads, dropout, feedforward_im):\n",
+    "    def __init__(self, model_dim, heads, dropout, feedforward_dim):\n",
     "        super(TransformerBlock, self).__init__()\n",
     "        # init the self attention model\n",
     "        self.attention = SelfAttention(model_dim, heads)\n",
     "        \n",
-    "        "
+    "        self.norm1 = nn.LayerNorm(model_dim)\n",
+    "        self.norm2 = nn.LayerNorm(model_dim)\n",
+    "        \n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "        self.feed_forward = nn.Sequential(\n",
+    "            nn.Linear(model_dim, feedforward_dim*model_dim),\n",
+    "            nn.Relu(),\n",
+    "            nn.Linear(feedforward_dim*model_dim, model_dim)\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, value, key, query mask):\n",
+    "        attention = self.attention(values, key, query, mask)\n",
+    "        # skip connection and dropout\n",
+    "        x = self.dropout(self.norm1(attention + query))\n",
+    "        # feedforward expansion and contraction\n",
+    "        forward = self.feed_forward(x)\n",
+    "        # skip connection and dropout\n",
+    "        out = self.dropout(self.norm2(forward + x))\n",
+    "        return out \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a34ac572",
+   "metadata": {},
+   "source": [
+    "### Encoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bc5fb398",
+   "execution_count": null,
+   "id": "c072e53b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SelfAttention(\n",
-       "  (values): Linear(in_features=2, out_features=2, bias=False)\n",
-       "  (keys): Linear(in_features=2, out_features=2, bias=False)\n",
-       "  (queries): Linear(in_features=2, out_features=2, bias=False)\n",
-       "  (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dd5f099",
+   "id": "61cd9a1a",
    "metadata": {},
    "outputs": [],
    "source": []
