--- a/dev.ipynb
+++ b/dev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "241bafaa",
+   "id": "dc62363f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc62d5b",
+   "id": "c1a5d3af",
    "metadata": {},
    "source": [
     "![Transformer architecture](./media/transformer.png)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1bacd60",
+   "id": "d67edea5",
    "metadata": {},
    "source": [
     "### Self attention module\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a35fc5f4",
+   "id": "50bb33b5",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f258e608",
+   "id": "018558f9",
    "metadata": {},
    "source": [
     "### Transformer block \n",
@@ -124,10 +124,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d70336bf",
+   "execution_count": 21,
+   "id": "8e428a0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TransformerBlock(\n",
+       "  (attention): SelfAttention(\n",
+       "    (values): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (keys): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (queries): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
+       "  )\n",
+       "  (norm1): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "  (norm2): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "  (dropout): Dropout(p=0.3, inplace=False)\n",
+       "  (feed_forward): Sequential(\n",
+       "    (0): Linear(in_features=12, out_features=48, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=48, out_features=12, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TransformerBlock(nn.Module):\n",
     "    def __init__(self, model_dim, heads, dropout, feedforward_dim):\n",
@@ -142,11 +168,11 @@
     "        \n",
     "        self.feed_forward = nn.Sequential(\n",
     "            nn.Linear(model_dim, feedforward_dim*model_dim),\n",
-    "            nn.Relu(),\n",
+    "            nn.ReLU(),\n",
     "            nn.Linear(feedforward_dim*model_dim, model_dim)\n",
     "        )\n",
     "        \n",
-    "    def forward(self, value, key, query mask):\n",
+    "    def forward(self, value, key, query, mask):\n",
     "        attention = self.attention(values, key, query, mask)\n",
     "        # skip connection and dropout\n",
     "        x = self.dropout(self.norm1(attention + query))\n",
@@ -155,21 +181,24 @@
     "        # skip connection and dropout\n",
     "        out = self.dropout(self.norm2(forward + x))\n",
     "        return out \n",
-    "    "
+    "    \n",
+    "t = TransformerBlock(model_dim = 12, heads=2, dropout=0.3, feedforward_dim=4)\n",
+    "t"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a34ac572",
+   "id": "b43a4e73",
    "metadata": {},
    "source": [
-    "### Encoder"
+    "### Encoder\n",
+    "<img src=\"./media/encoder.png\" alt=\"encoder\" width=\"300\"/>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c072e53b",
+   "id": "9c493908",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -177,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61cd9a1a",
+   "id": "9355aba7",
    "metadata": {},
    "outputs": [],
    "source": []
