development of transformer decoder block

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc62363f",
+   "id": "cde3b521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a5d3af",
+   "id": "ea674c97",
    "metadata": {},
    "source": [
     "![Transformer architecture](./media/transformer.png)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67edea5",
+   "id": "cbace08b",
    "metadata": {},
    "source": [
     "### Self attention module\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "50bb33b5",
+   "id": "410ef2c2",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018558f9",
+   "id": "13bef3b9",
    "metadata": {},
    "source": [
     "### Transformer block \n",
@@ -124,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8e428a0b",
+   "execution_count": 23,
+   "id": "af2a803c",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        ")"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43a4e73",
+   "id": "a20a973d",
    "metadata": {},
    "source": [
     "### Encoder\n",
@@ -197,8 +197,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "d8899dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Encoder(nn.Module):\n",
+    "    \n",
+    "    def __init__(self,\n",
+    "                src_vocab_size, \n",
+    "                model_dim, \n",
+    "                heads,\n",
+    "                device,\n",
+    "                feedforward_dim,\n",
+    "                dropout, \n",
+    "                max_len):\n",
+    "        \n",
+    "        super(Encoder, self).__init__()\n",
+    "        self.model_dim = model_dim \n",
+    "        self.device = device \n",
+    "        self.src_vocab_size = src_vocab_size\n",
+    "        # word embeddings\n",
+    "        self.word_emedding =  nn.Embedding(src_vocab_size, model_dim)\n",
+    "        # poisitonal embeddings \n",
+    "        self.positional_embedding = nn.Embedding(max_len, model_dim)\n",
+    "\n",
+    "        self.layers = nn.ModuleList(\n",
+    "        [\n",
+    "            TransformerBlock(model_dim,\n",
+    "                             heads,\n",
+    "                             dropout=dropout,\n",
+    "                             feedforward_dim=feedforward_dim)\n",
+    "        ]\n",
+    "        )\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x, mask):\n",
+    "        N, seq_len  = x.shape\n",
+    "        \n",
+    "        positions = (torch.arange(0, seq_len)\n",
+    "                     .expand(N, seq_len)\n",
+    "                     .to(self.device))\n",
+    "        # add the word embeddings and the position embeddings together \n",
+    "        positional_word_embedding = self.word_embedding(x) + self.position_embedding(positions)\n",
+    "        out = self.dropout(position_aware_word_embedding)\n",
+    "        \n",
+    "e = Encoder(100,12, 2, \"cpu\", 10, 0.3, 10)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c7cb9c",
+   "metadata": {},
+   "source": [
+    "### Decoder Block\n",
+    "<img src=\"./media/decoder.png\" alt=\"decoder\" width=\"300\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "69b342fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderBlock(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, model_dim, heads, feedforward_dim, dropout, device):\n",
+    "        super(DecoderBlock, self).__init__()\n",
+    "        # defining the self attention mechanism \n",
+    "        self.attention = SelfAttention(model_dim,heads)\n",
+    "        self.norm = nn.LayerNorm(model_dim)\n",
+    "        self.transformer_block = TransformerBlock(\n",
+    "        model_dim, heads, dropout, feedforward_dim\n",
+    "        )\n",
+    "        \n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, x, value, key, src_mask, trg_mask):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9c493908",
+   "id": "4e140641",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -206,9 +289,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9355aba7",
+   "id": "4c5b3b9c",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91c2b1e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8f0c802a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
