add image and last decoder component

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "cde3b521",
+   "execution_count": null,
+   "id": "30750fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea674c97",
+   "id": "27f9a879",
    "metadata": {},
    "source": [
     "![Transformer architecture](./media/transformer.png)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbace08b",
+   "id": "21148e91",
    "metadata": {},
    "source": [
     "### Self attention module\n",
@@ -38,26 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "410ef2c2",
+   "execution_count": null,
+   "id": "6e7195ea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SelfAttention(\n",
-       "  (values): Linear(in_features=2, out_features=2, bias=False)\n",
-       "  (keys): Linear(in_features=2, out_features=2, bias=False)\n",
-       "  (queries): Linear(in_features=2, out_features=2, bias=False)\n",
-       "  (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class SelfAttention(nn.Module):\n",
     "    def __init__(self, model_dim, heads ):\n",
@@ -115,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13bef3b9",
+   "id": "36d3184e",
    "metadata": {},
    "source": [
     "### Transformer block \n",
@@ -124,36 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "af2a803c",
+   "execution_count": null,
+   "id": "0429c274",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TransformerBlock(\n",
-       "  (attention): SelfAttention(\n",
-       "    (values): Linear(in_features=6, out_features=6, bias=False)\n",
-       "    (keys): Linear(in_features=6, out_features=6, bias=False)\n",
-       "    (queries): Linear(in_features=6, out_features=6, bias=False)\n",
-       "    (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
-       "  )\n",
-       "  (norm1): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
-       "  (norm2): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
-       "  (dropout): Dropout(p=0.3, inplace=False)\n",
-       "  (feed_forward): Sequential(\n",
-       "    (0): Linear(in_features=12, out_features=48, bias=True)\n",
-       "    (1): ReLU()\n",
-       "    (2): Linear(in_features=48, out_features=12, bias=True)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TransformerBlock(nn.Module):\n",
     "    def __init__(self, model_dim, heads, dropout, feedforward_dim):\n",
@@ -188,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a20a973d",
+   "id": "483fa0ed",
    "metadata": {},
    "source": [
     "### Encoder\n",
@@ -197,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d8899dbe",
+   "execution_count": null,
+   "id": "13a1c185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,17 +205,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c7cb9c",
+   "id": "e201c886",
    "metadata": {},
    "source": [
     "### Decoder Block\n",
-    "<img src=\"./media/decoder.png\" alt=\"decoder\" width=\"300\"/>"
+    "<img src=\"./media/decoder-block.png\" alt=\"decoder-block\" width=\"300\"/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "69b342fc",
+   "execution_count": null,
+   "id": "613547f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,52 +233,37 @@
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, x, value, key, src_mask, trg_mask):\n",
-    "        "
+    "        \n",
+    "        attention = self.attention(x, x, x, trg_mask)\n",
+    "        query = self.dropout(self.norm(attention + x ))\n",
+    "        out = self.transformer_block(value, key, query, src_mask)\n",
+    "        return out \n",
+    "    \n",
+    "d = DecoderBlock(12, 2, 10, 0.4, \"cpu\")\n",
+    "d"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e140641",
+   "cell_type": "markdown",
+   "id": "fbb1a0d3",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Decoder\n",
+    "<img src=\"./media/decoder.png\" alt=\"decoder piece\" width=\"300\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92ce0e69",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c5b3b9c",
+   "id": "c30fcf55",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91c2b1e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "8f0c802a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
-       "        [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": []
   }
  ],
