--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "30750fb8",
+   "execution_count": 2,
+   "id": "536df7f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/akinwilson/.local/share/virtualenvs/transformer-ZSDFiGtT/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# data handling \n",
     "import torch \n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "# neural network api\n",
     "import torch.autograd as autograd \n",
-    "from torch import Tensor \n",
+    "from torch import Tensor # parameter creation tensor  \n",
     "import torch.nn as nn \n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim"
@@ -20,15 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f9a879",
-   "metadata": {},
-   "source": [
-    "![Transformer architecture](./media/transformer.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21148e91",
+   "id": "41820e1c",
    "metadata": {},
    "source": [
     "### Self attention module\n",
@@ -38,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e7195ea",
+   "execution_count": 3,
+   "id": "ea7b724d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d3184e",
+   "id": "7daba018",
    "metadata": {},
    "source": [
     "### Transformer block \n",
@@ -108,13 +109,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0429c274",
+   "execution_count": 4,
+   "id": "4a02cf73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TransformerBlock(\n",
+       "  (attention): SelfAttention(\n",
+       "    (values): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (keys): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (queries): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
+       "  )\n",
+       "  (norm1): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "  (norm2): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "  (dropout): Dropout(p=0.3, inplace=False)\n",
+       "  (feed_forward): Sequential(\n",
+       "    (0): Linear(in_features=12, out_features=48, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=48, out_features=12, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TransformerBlock(nn.Module):\n",
-    "    def __init__(self, model_dim, heads, dropout, feedforward_dim):\n",
+    "    def __init__(self, model_dim, heads, dropout, feedforward_dim_mult):\n",
     "        super(TransformerBlock, self).__init__()\n",
     "        # init the self attention model\n",
     "        self.attention = SelfAttention(model_dim, heads)\n",
@@ -125,9 +152,9 @@
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "        self.feed_forward = nn.Sequential(\n",
-    "            nn.Linear(model_dim, feedforward_dim*model_dim),\n",
+    "            nn.Linear(model_dim, feedforward_dim_mult*model_dim),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(feedforward_dim*model_dim, model_dim)\n",
+    "            nn.Linear(feedforward_dim_mult*model_dim, model_dim)\n",
     "        )\n",
     "        \n",
     "    def forward(self, value, key, query, mask):\n",
@@ -140,13 +167,13 @@
     "        out = self.dropout(self.norm2(forward + x))\n",
     "        return out \n",
     "    \n",
-    "t = TransformerBlock(model_dim = 12, heads=2, dropout=0.3, feedforward_dim=4)\n",
+    "t = TransformerBlock(model_dim = 12, heads=2, dropout=0.3, feedforward_dim_mult=4)\n",
     "t"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "483fa0ed",
+   "id": "603fd69c",
    "metadata": {},
    "source": [
     "### Encoder\n",
@@ -155,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "13a1c185",
+   "execution_count": 5,
+   "id": "8449d834",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +194,7 @@
     "                model_dim, \n",
     "                heads,\n",
     "                device,\n",
-    "                feedforward_dim,\n",
+    "                feedforward_dim_mult,\n",
     "                dropout, \n",
     "                max_len):\n",
     "        \n",
@@ -185,7 +212,7 @@
     "            TransformerBlock(model_dim,\n",
     "                             heads,\n",
     "                             dropout=dropout,\n",
-    "                             feedforward_dim=feedforward_dim)\n",
+    "                             feedforward_dim_mult=feedforward_dim_mult)\n",
     "        ]\n",
     "        )\n",
     "        self.dropout = nn.Dropout(dropout)\n",
@@ -205,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e201c886",
+   "id": "b57977e8",
    "metadata": {},
    "source": [
     "### Decoder Block\n",
@@ -214,20 +241,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "613547f2",
+   "execution_count": 6,
+   "id": "af464663",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecoderBlock(\n",
+       "  (attention): SelfAttention(\n",
+       "    (values): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (keys): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (queries): Linear(in_features=6, out_features=6, bias=False)\n",
+       "    (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
+       "  )\n",
+       "  (norm): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "  (transformer_block): TransformerBlock(\n",
+       "    (attention): SelfAttention(\n",
+       "      (values): Linear(in_features=6, out_features=6, bias=False)\n",
+       "      (keys): Linear(in_features=6, out_features=6, bias=False)\n",
+       "      (queries): Linear(in_features=6, out_features=6, bias=False)\n",
+       "      (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
+       "    )\n",
+       "    (norm1): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "    (norm2): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "    (dropout): Dropout(p=0.4, inplace=False)\n",
+       "    (feed_forward): Sequential(\n",
+       "      (0): Linear(in_features=12, out_features=120, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=120, out_features=12, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0.4, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class DecoderBlock(nn.Module):\n",
     "    \n",
-    "    def __init__(self, model_dim, heads, feedforward_dim, dropout, device):\n",
+    "    def __init__(self, model_dim, heads, feedforward_dim_mult, dropout, device):\n",
     "        super(DecoderBlock, self).__init__()\n",
     "        # defining the self attention mechanism \n",
     "        self.attention = SelfAttention(model_dim,heads)\n",
     "        self.norm = nn.LayerNorm(model_dim)\n",
     "        self.transformer_block = TransformerBlock(\n",
-    "        model_dim, heads, dropout, feedforward_dim\n",
+    "        model_dim, heads, dropout, feedforward_dim_mult\n",
     "        )\n",
     "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
@@ -245,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbb1a0d3",
+   "id": "30d7c292",
    "metadata": {},
    "source": [
     "### Decoder\n",
@@ -253,18 +316,199 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "92ce0e69",
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c28ead35",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, \n",
+    "                trg_vocab_size, \n",
+    "                model_dim, \n",
+    "                num_layers,\n",
+    "                heads,\n",
+    "                feedforward_dim_mult, \n",
+    "                dropout,\n",
+    "                device, \n",
+    "                max_len):\n",
+    "        super(Decoder, self).__init__()\n",
+    "        \n",
+    "        self.device = device \n",
+    "        self.word_embedding = nn.Embedding(trg_vocab_size, model_dim)\n",
+    "        self.position_embedding = nn.Embedding(max_len, model_dim)\n",
+    "        \n",
+    "        self.layers = nn.ModuleList(\n",
+    "            [\n",
+    "                DecoderBlock(model_dim, heads, feedforward_dim_mult, dropout, device)\n",
+    "                for _ in range(num_layers)\n",
+    "            ]\n",
+    "        )\n",
+    "        self.fc_out = nn.Linear(model_dim, trg_vocab_size)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, x, value, key, src_mask, trg_mask):\n",
+    "        N, seq_len = x.shape \n",
+    "        \n",
+    "        positions = (torch.arange(0, seq_len)\n",
+    "                     .expand(N,seq_len)\n",
+    "                     .to(Deivce))\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, enc_out, enc_out, src_mask, trg_mask)\n",
+    "        \n",
+    "        out = self.fc_out(x)\n",
+    "        return x     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6960dfbd",
+   "metadata": {},
+   "source": [
+    "### Transformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19ea26bf",
+   "metadata": {},
+   "source": [
+    "<img src=./media/transformer.png alt=\"self-attention\" width=\"300\"/>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c30fcf55",
+   "execution_count": 12,
+   "id": "3265fc2f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Transformer(\n",
+       "  (encoder): Encoder(\n",
+       "    (word_emedding): Embedding(10, 256)\n",
+       "    (positional_embedding): Embedding(96, 256)\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerBlock(\n",
+       "        (attention): SelfAttention(\n",
+       "          (values): Linear(in_features=32, out_features=32, bias=False)\n",
+       "          (keys): Linear(in_features=32, out_features=32, bias=False)\n",
+       "          (queries): Linear(in_features=32, out_features=32, bias=False)\n",
+       "          (fc_out): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        )\n",
+       "        (norm1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout): Dropout(p=0, inplace=False)\n",
+       "        (feed_forward): Sequential(\n",
+       "          (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "          (1): ReLU()\n",
+       "          (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (dropout): Dropout(p=0, inplace=False)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Transformer(nn.Module):\n",
+    "    \n",
+    "    def __init__(self,\n",
+    "                 src_vocab_size, \n",
+    "                trg_vocab_size,\n",
+    "                 src_pad_idx,\n",
+    "                 trg_pad_idx, \n",
+    "                 model_dim=256,\n",
+    "                 num_layers=2,\n",
+    "                 feedforward_dim_mult=4,\n",
+    "                 dropout=0,\n",
+    "                 heads=8,\n",
+    "                 device=\"cuda\",\n",
+    "                 max_len=96\n",
+    "                ):\n",
+    "        super(Transformer, self).__init__()\n",
+    "\n",
+    "        self.encoder = Encoder( src_vocab_size, \n",
+    "                                model_dim, \n",
+    "                                heads,\n",
+    "                                device,\n",
+    "                                feedforward_dim_mult,\n",
+    "                                dropout, \n",
+    "                                max_len)\n",
+    "        \n",
+    "        self.src_pad_idx=  src_pad_idx\n",
+    "        self.trg_pad_idx = trg_pad_idx \n",
+    "        self.device= device \n",
+    "        \n",
+    "        \n",
+    "    def make_src_mask(self,src):\n",
+    "        src_mask = (src != self.src_pad_idx).unsqueeze(1).unsqueeze(2)\n",
+    "        # src_mask (N, 1, 1, src_len)\n",
+    "        return src_mask.to(self.device)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def make_trg_mask(self,trg):\n",
+    "        N, trg_len = trg.shape\n",
+    "        # triangular mask\n",
+    "        trg_mask = torch.tril(\n",
+    "            torch.ones((trg_len, trg_len)).expand(N, 1, trg_len, trg_len)\n",
+    "        )\n",
+    "        return trg_mask.to(self.device)\n",
+    "    \n",
+    "    \n",
+    "    def forward(self, src, trg):\n",
+    "        src_mask = self.make_src_mask(src)\n",
+    "        trg_mask = self.make_trg_mask(trg)\n",
+    "        enc_src = self.encoder(src, src_mask)\n",
+    "        \n",
+    "        out = self.decoder(trg, enc_src, src_mask, trg_mask)\n",
+    "        return out \n",
+    "    \n",
+    "t = Transformer(10, 10, 0, 0,)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "778dbb63",
+   "metadata": {},
+   "source": [
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7cf2705b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
+    "\n",
+    "\n",
+    "x = torch.tensor([[1,5,6,4,3,5,2,0],\n",
+    "                  [1,8, 7,4,7,2,2]]).to(devi)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
